# aurora_hotel_concierge_voice_based_agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.talk-server  Dockerfile.worker  README.md  RUNBOOK.md  config.example.env  fly.talk-server.toml  fly.worker.toml  pyproject.toml
.claude/skills/adr/: SKILL.md
.claude/skills/edd/: SKILL.md
.claude/skills/gates/: SKILL.md
.claude/skills/roadmap-guard/: SKILL.md
.github/workflows/: ci.yml
docs/: latency-baseline.md  pii-retention-policy.md
evals/: core.json  red_team.json  run_evals.py  run_live_evals.py
knowledge/2026-07-19/: manifest.json
livekit/: agent_worker.py  create_token.py  requirements-server.txt  requirements.txt  talk_server.py  test_agent_worker.py  test_talk_server.py  test_token_utils.py  token_utils.py
livekit/web/: styles.css  talk.js
mocks/: demo_call.py
pipeline/: _shim_note.md  agent.py  auth.py  bookings.py  config.example.env  config_check.py  knowledge.py  load_test.py  manage_users.py  promote_prompt.py  prompt_registry.py  providers.py  rate_limit.py  requirements.txt  router.py  smoke_test.py  spoken_text.py  telemetry.py  telemetry_otel.py  test_auth.py  test_features.py  test_prompt_registry.py  test_rate_limit.py  voice_loop.py
src/aurora/: __init__.py  prompt_registry.py  rate_limit.py
src/aurora/config/: check.py
src/aurora/core/: agent.py  knowledge.py  prompts.py  providers.py  spoken_text.py  tools.py
src/aurora/ops/: create_room.py  create_token.py  load_test.py  manage_users.py  promote_prompt.py  slo_report.py  smoke.py  sync_prompt.py
src/aurora/server/: __main__.py  app.py  cookies.py  deps.py  replies.py  sessions.py  token_utils.py
src/aurora/server/routes/: auth.py  meta.py  turns.py
src/aurora/server/web/: auth.js  index.html  site.css  site.html  talk.js  widget.js
src/aurora/storage/: auth.py  bookings.py
src/aurora/telemetry/: __init__.py  otel.py  traces.py
src/aurora/voice/: loop.py
src/aurora/worker/: __main__.py  main.py
tests/: test_agent_worker.py  test_auth.py  test_env_loader.py  test_features.py  test_prompt_registry.py  test_rate_limit.py  test_talk_server.py  test_token_utils.py
