# Aurora is one installable package (goal.md ADR-020). The base install is the
# offline core: enough to run the agent brain, smoke test, unit tests, and eval
# suites with PROVIDER=mock — no server framework, no audio stack, no LiveKit.
# Each deployable pulls exactly what it needs via an extra (mirrors ADR-012's
# two-image split): [server] for the FastAPI talk server, [worker] for the
# room-native LiveKit worker, [audio] for local mic mode.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aurora"
version = "1.0.0"
description = "Aurora Hotel voice agent: brain, talk server, LiveKit worker, and ops tooling"
requires-python = ">=3.12"
dependencies = [
    # Groq AND OpenAI both use the openai SDK (base_url swap) — providers.py
    # imports it at module level even under PROVIDER=mock (never called).
    "openai>=1.30",
    # storage/auth password hashing (ADR-018) — SqliteAuthBackend (tests) needs
    # nothing beyond this.
    "argon2-cffi>=23.1",
    # .env loading for CLIs run from the repo root; pure-python, keeps ops
    # scripts from silently skipping .env when only the base is installed.
    "python-dotenv",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "livekit-api",
    "psycopg[binary]>=3.1",
    "opik",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
]
worker = [
    "livekit-api",
    "livekit-agents[openai,silero]~=1.6",
    "opik",
    # goal.md ADR-020: create_booking/lookup_booking are Postgres-only, and
    # the worker's Agent calls them the same as the HTTP bridge does — this
    # was missing (never caught because nothing had tested a real booking
    # through the worker), so every booking attempt on a real call would
    # have crashed with ModuleNotFoundError.
    "psycopg[binary]>=3.1",
]
audio = [
    "sounddevice",
    "webrtcvad",
    "numpy",
    "setuptools<81",  # webrtcvad imports pkg_resources
]
dev = [
    "httpx>=0.27",  # fastapi.testclient transport
]

[tool.hatch.build.targets.wheel]
packages = ["src/aurora"]
